# rust_proto_llvm

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  WORKSPACE
.build/bazel/bazelrc/: correctness.bazelrc  performance.bazelrc
.build/bazel/patches/: circulardeps.patch
.build/bazel/proto/: defs.bzl
.build/bazel/pytest/: defs.bzl  pytest_wrapper.py
.build/bazel/utils/: BUILD.bazel  defs.bzl  py_meta_script.sh
.build/toolchains/: readme.md
.build/toolchains/protoc/: BUILD.bazel
.build/toolchains/rust_prost/: BUILD.bazel
samples/: readme.md
samples/proto/: BUILD.bazel
samples/proto_python/: BUILD.bak
samples/proto_rust/: BUILD.bazel  sample.proto
samples/python/: BUILD.bazel  hello_lib.py  hello_world.py
samples/python/tests/: test_lib.py
samples/rust/: BUILD.bazel  hello_lib.rs  hello_world.rs
samples/rust/tests/: test_lib.rs
